--- a/Cart.html
+++ b/Cart.html
@@ -329,7 +329,7 @@
                 <option value="Select Coupon" id="selectCoupon">Select Coupon</option>
                 <option style="display: none;" value="WALLET0FF50%" id="walletOff50%">WALLET0FF50%</option>
                 <option style="display: none;" value="FLAT100OFF" id="flat100Off">FLAT100OFF</option>
-                <option value="100%WALLETCASHBACK" id="100%WalletCashback">100%WALLETCASHBACK
+                <option value="100%WALLETCASHBACK*" id="100%WalletCashback">100%WALLETCASHBACK*
                 </option>
 
             </select>
